# rag-constructor

./: .dockerignore  .env.example  .gitattributes  .gitignore  Jenkinsfile  README.md  TODO  claude.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .env.test  .flake8  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250411_0001_initial_schema.py  20250413_0002_extend_project_with_full_settings.py
backend/api/: chat.py  data_sources.py  projects.py  search.py  upload.py
backend/core/: Document.py  factories.py
backend/core/embeddings/: __init__.py  base.py  huggingface_embedder.py  openai_embedder.py
backend/core/ingestion/: base.py  parser.py  pipeline.py  splitter.py
backend/core/llm/: base.py  openai_llm.py
backend/core/vector_store/: __init__.py  base.py  qdrant_store.py
backend/db/: database.py  init_db.py  models.py  schemas.py
backend/pytest-cache-files-zmfnhlfy/v/cache/: nodeids
backend/tasks/: ingestion_tasks.py  worker.py
backend/tests/: conftest.py  test_chat.py  test_embeddings.py  test_health.py  test_parser_splitter.py  test_projects.py  test_search_api.py  test_vector_store.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.spec.json  vite.config.json  vite.config.ts  vitest.config.js  vitest.config.ts
frontend/src/: index.html  test-setup.ts
frontend/src/app/: app.config.ts  app.css  app.routes.ts  app.spec.ts
(+20 files in other folders)
