[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-constructor-backend"
version = "0.1.0"
description = "Backend for RAG Constructor"
authors = [{name = "Author", email = "author@example.com"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.dependencies]
fastapi = ">=0.135.3"
uvicorn = {extras = ["standard"], version = ">=0.41.0"}
pydantic = ">=2.12.5"
pydantic-settings = ">=2.13.1"
sqlalchemy = ">=2.0.48"
alembic = ">=1.18.4"
psycopg2-binary = ">=2.9.10"
celery = ">=5.6.3"
redis = ">=7.2.0"
qdrant-client = ">=1.17.1"
openai = ">=2.26.0"
pypdf = ">=6.8.0"
python-docx = ">=1.1.2"
langchain = ">=1.2.15"
langchain-text-splitters = ">=0.3.9"
python-multipart = ">=0.0.22"
python-dotenv = ">=1.1.1"
httpx = ">=0.28.1"